--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -52,3 +52,4 @@ add_test_case_with_run(oprf test_cope)
 add_test_case_with_run(oprf test_basevole)
 add_test_case_with_run(oprf test_spsfss)
 add_test_case_with_run(oprf test_mpfss)
+add_test_case_with_run(oprf test_lpn)
