--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -53,3 +53,4 @@ add_test_case_with_run(oprf test_basevole)
 add_test_case_with_run(oprf test_spsfss)
 add_test_case_with_run(oprf test_mpfss)
 add_test_case_with_run(oprf test_lpn)
+add_test_case_with_run(oprf test_voletriple)
