--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -55,4 +55,5 @@ add_test_case_with_run(oprf test_mpfss)
 add_test_case_with_run(oprf test_lpn)
 add_test_case_with_run(oprf test_voletriple)
 add_test_case_with_run(oprf test_semihonest_oprf)
+add_test_case_with_run(oprf test_malicious_oprf)
 add_test_case_with_run(oprf test_pow)
