--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -57,3 +57,4 @@ add_test_case_with_run(oprf test_voletriple)
 add_test_case_with_run(oprf test_semihonest_oprf)
 add_test_case_with_run(oprf test_malicious_oprf)
 add_test_case_with_run(oprf test_pow)
+add_test_case_with_run(oprf test_single_semihoset_oprf)
