--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project (pr-oprf)
 set(NAME "pr-oprf")
 
 # specify the C++ standard
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 find_path(CMAKE_FOLDER NAMES cmake/emp-tool-config.cmake)
@@ -12,6 +12,7 @@ include(${CMAKE_FOLDER}/cmake/emp-base.cmake)
 
 find_package(emp-ot REQUIRED)
 find_package(GMP REQUIRED)
+find_package(libOTe REQUIRED)
 include_directories(
   ${EMP-OT_INCLUDE_DIRS}
   ${GMP_INCLUDE_DIR}
