--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 #Testing macro
 macro (add_test_executable_with_lib folder _name)
 	add_executable(test_${folder}_${_name} "${folder}/${_name}.cpp")
-	target_link_libraries(test_${folder}_${_name} ${EMP-OT_LIBRARIES} ${GMP_LIBRARIES} ${GMPXX_LIBRARIES} pr-oprf)
+	target_link_libraries(test_${folder}_${_name} ${EMP-OT_LIBRARIES} ${GMP_LIBRARIES} ${GMPXX_LIBRARIES} oc::libOTe pr-oprf)
 endmacro()
 
 macro (add_test_case folder _name)
