--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -49,7 +49,7 @@ add_test_case_with_run(vole vole_f2k_triple)
 add_test_case_with_run(oprf try)
 # add_test_case_with_run(oprf trygmp)
 add_test_case_with_run(oprf test_cope)
-# add_test_case_with_run(oprf test_basevole)
+add_test_case_with_run(oprf test_basevole)
 # add_test_case_with_run(oprf test_spsfss)
 # add_test_case_with_run(oprf test_mpfss)
 # add_test_case_with_run(oprf test_lpn)
@@ -57,4 +57,4 @@ add_test_case_with_run(oprf test_cope)
 # add_test_case_with_run(oprf test_semihonest_oprf)
 # add_test_case_with_run(oprf test_malicious_oprf)
 # add_test_case_with_run(oprf test_pow)
-# add_test_case_with_run(oprf test_single_semihoset_oprf)
+add_test_case_with_run(oprf test_single_semihoset_oprf)
