vole triples with libOTe

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -52,9 +52,9 @@ add_test_case_with_run(oprf test_cope)
 add_test_case_with_run(oprf test_basevole)
 add_test_case_with_run(oprf test_spsfss)
 add_test_case_with_run(oprf test_mpfss)
-# add_test_case_with_run(oprf test_lpn)
-# add_test_case_with_run(oprf test_voletriple)
-# add_test_case_with_run(oprf test_semihonest_oprf)
+add_test_case_with_run(oprf test_lpn)
+add_test_case_with_run(oprf test_voletriple)
+add_test_case_with_run(oprf test_semihonest_oprf)
 # add_test_case_with_run(oprf test_malicious_oprf)
 # add_test_case_with_run(oprf test_pow)
 add_test_case_with_run(oprf test_single_semihoset_oprf)
