--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -58,3 +58,4 @@ add_test_case_with_run(oprf test_semihonest_oprf)
 add_test_case_with_run(oprf test_malicious_oprf)
 # add_test_case_with_run(oprf test_pow)
 add_test_case_with_run(oprf test_single_semihoset_oprf)
+add_test_case_with_run(oprf test_single_malicious_oprf)
