prepare for test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -36,26 +36,28 @@ endmacro()
 # add_test_case_with_run(arith matrix_mul)
 # add_test_case_with_run(arith sis)
 
-add_test_case_with_run(vole vole_triple)
-add_test_case_with_run(vole cope)
-add_test_case_with_run(vole base_svole)
-add_test_case_with_run(vole lpn)
-add_test_case_with_run(vole vole_f2k_triple)
+# add_test_case_with_run(vole vole_triple)
+# add_test_case_with_run(vole cope)
+# add_test_case_with_run(vole base_svole)
+# add_test_case_with_run(vole lpn)
+# add_test_case_with_run(vole vole_f2k_triple)
 
 # add_test_case_with_run(ram ram_test)
 # add_test_case_with_run(ram ram_ext_test)
 # add_test_case_with_run(ram ro_ram_test)
 
-add_test_case_with_run(oprf try)
+# add_test_case_with_run(oprf try)
 # add_test_case_with_run(oprf trygmp)
-add_test_case_with_run(oprf test_cope)
-add_test_case_with_run(oprf test_basevole)
-add_test_case_with_run(oprf test_spsfss)
-add_test_case_with_run(oprf test_mpfss)
-add_test_case_with_run(oprf test_lpn)
-add_test_case_with_run(oprf test_voletriple)
+# add_test_case_with_run(oprf test_cope)
+# add_test_case_with_run(oprf test_basevole)
+# add_test_case_with_run(oprf test_spsfss)
+# add_test_case_with_run(oprf test_mpfss)
+# add_test_case_with_run(oprf test_lpn)
+# add_test_case_with_run(oprf test_voletriple)
 add_test_case_with_run(oprf test_semihonest_oprf)
 add_test_case_with_run(oprf test_malicious_oprf)
 # add_test_case_with_run(oprf test_pow)
 add_test_case_with_run(oprf test_single_semihoset_oprf)
 add_test_case_with_run(oprf test_single_malicious_oprf)
+
+add_test_case_with_run(oprf test_optimization_para)
